Bug 1202150 - Silence compiler warnings in nsMsgDBView and friends. r=rkent